# 1ssuetrak

./: .gitignore  Dockerfile  Untitled Diagram.drawio  docker-compose.yml  entrypoint.sh  requirements.txt
nginx/: Dockerfile
task-tracker-app/: README.md  poetry.toml  pyproject.toml  requirements.txt  run_dev.sh
task-tracker-app/core/: forms.py  urls.py  views.py
task-tracker-app/core/scripts/: autoProgress.py  git_commit_parser.py  job_extract_parser.py
task-tracker-app/core/templates/core/: base.html  footer.html  git_history.html  git_table.html  index.html  nav.html  paginator_nav.html
task-tracker-app/issue_tracker/: settings.py  urls.py
task-tracker-app/issues/: admin.py  forms.py  models.py  urls.py  views.py
task-tracker-app/issues/migrations/: 0001_change_constraints.py  0001_merged_issues.py  0002_change_structure.py  0002_profilepic_and_comment.py  0003_change_structure_3.py  0003_issuecomment_c_cont_alter_issueowner_profile_img.py  0004_alter_issue_o_uid.py  0004_change_structure_4.py  0005_alter_issue_options_alter_issue_o_uid_and_more.py  0005_create_status_field.py  0006_remove_issue_s_date_issuerec_s_date_and_more.py
task-tracker-app/issues/scripts/: data_gen.py
task-tracker-app/issues/templates/issues/: howto.html  index.html  issue_comment.html  issue_confirm_del.html  issue_detail.html  issue_new.html  issue_solve.html  issue_tab.html  user_detail.html
task-tracker-app/issues/templatetags/: search_hl.py
task-tracker-app/templates/registration/: login.html  logout.html  signup_bs.html
